# rats

./: .gitignore  CHANGELOG-CLAUDE.md  CLAUDE-CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  Val.facts  a.turn  afpa2.md  afpa3.md  asdf.turn  card.tin  card.turn  dominion.turn  flamegraph-rust.sh  layout.derp  notes-on-query-derivative.md  prelude.derp  prelude.dl  profile-rust.sh  rats.cabal  test.derp  test.tin  tinman.cabal  ttt.turn  view.html
diagrams/: Comma2.hs  Makefile  svg-to-pdf.sh
hs-test-files/: concat-parse-test.out.txt  concat-parse-test.txt
js/: add.derp  eval-fn.js  eval.js  index.html  issues  package.json  parse-rule.js  run.js  server.js  store.js  test-parse.js  test.js  util.js
js/tests/: add.derp  better-path-1.expected.derp  game-1.expected.derp  game-2.expected.derp  game-3.derp  game-3.expected.derp  init-1.derp  init-1.expected.derp  loop-miscount-1.derp  loop-miscount-1.expected.derp  loop-miscount-3.derp  t1.derp  terms-1.derp  terms-1.expected.derp  total-1.expected.derp
plans/: 1.md  2.md  3.md  4.md  5.md
rust-derp/: Cargo.toml  test_simple.derp
rust-derp-gui/: Cargo.toml
rust-derp-gui/src/: main.rs
rust-derp/benches/: derp_bench.rs
rust-derp/benches/data/: out.derp  test_negation.derp
rust-derp/src/: core.rs  lib.rs  main.rs  parse.rs  sym.rs  types.rs
rust-derp/tests/: golden.rs  indexing.rs  invariants.rs  ttt.rs  tuple_counts.rs
rust-derp/tests/data/: arith.derp  choose1.derp  circle.derp  neg_ex.derp  neg_simple.derp  ttt.derp
rust-derp/tests/tests/: add.expected.derp  better-path-1.derp  game-1.derp  game-2.derp  loop-miscount-2.derp  loop-miscount-3.expected.derp  t1.expected.derp  terms-1.derp  terms-1.expected.derp  total-1.derp
src/: Basic.hs  Binding.hs  CatShelf.hs  Compile.hs  ConcatParse.hs  Derp.hs  GenDerp.hs  GenSouffle.hs  MMap.hs  Main.hs  ParseDerp.hs  Parser.hs  ParserCombinator.hs  Process.hs  Server.hs  TestConcatParse.hs  TestPipeline.hs  Types.hs
src/Derp/: Core.hs  Gen.hs  Parse.hs  Types.hs
src/DrawDiagram/: Core.hs  Layout.hs  Main.hs
temp-parsing-tests/: b.turn
turn-src/: a.turn  dominion.turn  ttt.turn
