cabal-version:      3.0
-- The cabal-version field refers to the version of the .cabal specification,
-- and can be different from the cabal-install (the tool) version and the
-- Cabal (the library) version you are using. As such, the Cabal (the library)
-- version used must be equal or greater than the version stated in this field.
-- Starting from the specification version 2.2, the cabal-version field must be
-- the first thing in the cabal file.

-- Reasoning About Time Symbolically
name:               rats

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:            BSD-3-Clause

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Scott Kovach

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         dskovach@gmail.com

-- A copyright notice.
-- copyright:
category:           Language
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall
      -Wno-unused-imports -Wno-type-defaults -Wno-missing-pattern-synonym-signatures
      -Wno-missing-signatures
      -Wunused-top-binds

executable rats
    -- Import common warning flags.
    import:           warnings

    default-extensions: PatternSynonyms, FunctionalDependencies, GeneralizedNewtypeDeriving

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Basic
      , ParserCombinator
      , MMap
      , Binding
      , Types
      , Compile
      , Parser
      , Derp.Types, Derp.Core, Derp.Parse
      , GenSouffle, Derp.Gen
      , Server

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.21.0.0,
                      mtl,
                      text,
                      stm,
                      containers,
                      split,
                      unordered-containers, hashable,
                      warp,
                      wai,
                      wai-websockets,
                      websockets,
                      aeson,
                      http-types,
                      bytestring


    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: GHC2024

    profiling: True

    ghc-options:
        -O2
        -fprof-auto
