[package]
name = "derp"
version = "0.1.0"
edition = "2024"

[dependencies]
smallvec = { version = "1", features = ["union"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "derp_bench"
harness = false

[profile.release]
debug = true
